font family downloaded

--- a/Welcome.html
+++ b/Welcome.html
@@ -2,14 +2,42 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <link rel="stylesheet" href="style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Caveat:wght@400;700&family=Dancing+Script:wght@400;500;600&family=Dosis:wght@200&family=Lora:ital,wght@1,700&family=Roboto:wght@100&display=swap" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>welcome page</title>
-    <link rel="stylesheet" href="style.css" />
   </head>
-  <body>
-    <div class="image-container">
-      <img src="./images/welcome_page.jpg" alt="dairy farm pics " />
-      <div class=" overlay-text">
+    <body>
+      <header class="header">
+      <nav class="navbar">
+        <a href="#">Malhi Dairy</a>
+        <ul class="nav_menu">
+          <li class="nav-item">
+            <a href="#" class="classnav-link">Home</a>
+          </li>
+          <li class="nav-item">
+            <a href="#" class="classnav-link">Services</a>
+          </li>
+          <li class="nav-item">
+            <a href="#" class="classnav-link">Products</a>
+          </li>
+          <li class="nav-item">
+            <a href="#" class="classnav-link">Contact</a>
+          </li>
+        </ul>
+        <div class="hamburger">
+          <span class="bar"></span>
+          <span class="bar"></span>
+          <span class="bar"></span>
+          <span class="bar"></span>
+        </div>
+      </nav>
+    </header>
+      <div class="image-container">
+        <img src="./images/welcome_page.jpg" alt="dairy farm pics " />
+        <div class=" overlay-text">
         <h2>Welcome to the world of Malhi Dairy farm</h2>
        “One bite and you'll be in Dairy Milk heaven.” “Dairy Milk is like a warm hug in a bar.” “Life is short,
         eat the Dairy Milk.” “There's no such thing as too much Dairy Milk.”
