some changes have been done

--- a/Welcome.html
+++ b/Welcome.html
@@ -3,17 +3,18 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="style.css" />
+    <script src="main.js"></script>   
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Caveat:wght@400;700&family=Dancing+Script:wght@400;500;600&family=Dosis:wght@200&family=Lora:ital,wght@1,700&family=Roboto:wght@100&display=swap" rel="stylesheet">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>welcome page</title>
   </head>
     <body>
       <header class="header">
       <nav class="navbar">
         <a href="#">Malhi Dairy</a>
-        <ul class="nav_menu">
+        <ul class="nav-menu">
           <li class="nav-item">
             <a href="#" class="classnav-link">Home</a>
           </li>
